@@ -172,7 +172,7 @@
 						$('span.plupload_add_text', target).text(uploader.total.queued + ' files queued.');
 					}
 
-					$('a.plupload_start', target).toggleClass('plupload_disabled', uploader.files.length === 0);
+					$('a.plupload_start', target).toggleClass('plupload_disabled', uploader.files.length == (uploader.total.uploaded + uploader.total.failed));
 
 					// Scroll to end of file list
 					fileList[0].scrollTop = fileList[0].scrollHeight;
@@ -281,20 +281,19 @@
 					if (uploader.state === plupload.STARTED) {
 						$('li.plupload_delete a,div.plupload_buttons', target).hide();
 						$('span.plupload_upload_status,div.plupload_progress,a.plupload_stop', target).css('display', 'block');
-						$('span.plupload_upload_status', target).text('Uploaded 0/' + uploader.files.length + ' files');
+						$('span.plupload_upload_status', target).text('Uploaded ' + uploader.total.uploaded + '/' + uploader.files.length + ' files');
+
+						if (settings.multiple_queues) {
+							$('span.plupload_total_status,span.plupload_total_file_size', target).show();
+						}
 					} else {
+						updateList();
 						$('a.plupload_stop,div.plupload_progress', target).hide();
 						$('a.plupload_delete', target).css('display', 'block');
 					}
 				});
 
 				uploader.bind('QueueChanged', updateList);
-
-				uploader.bind('StateChanged', function(up) {
-					if (up.state == plupload.STOPPED) {
-						updateList();
-					}
-				});
 
 				uploader.bind('FileUploaded', function(up, file) {
 					handleStatus(file);
@@ -306,6 +305,12 @@
 
 					handleStatus(file);
 					updateTotalProgress();
+
+					if (settings.multiple_queues && uploader.total.uploaded + uploader.total.failed == uploader.files.length) {
+						$(".plupload_buttons,.plupload_upload_status", target).css("display", "inline");
+						$(".plupload_start", target).addClass("plupload_disabled");
+						$('span.plupload_total_status,span.plupload_total_file_size', target).hide();
+					}
 				});
 
 				// Call setup function
