@@ -1,4 +1,5 @@
 Version 1.2.x (2010-xx-xx)
+	Added new multiple_queues option that enables you to upload multiple times in the queue widgets.
 	Added support for crossdomain loading of the XAP and SWF files and crossdomain upload.
 	Added preinit/init options to to ease up the binding of custom events to queueWidget and the Uploader class.
 	Added drag/drop support for Safari kind of a hack until they release official drag/drop support like Chrome.
